# HatONames

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  HatONamesCLI.c  HatONamesGUI.c
include/hatlib/: hatlib.h
src/: CMakeLists.txt  hatlib.c
